--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "body-parser": "^1.20.1",
     "mongoose": "^6.7.0",
     "multer": "^1.4.5-lts.1",
     "passport-jwt": "^4.0.0",
