--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typeorm": "^0.3.10"
   },
   "devDependencies": {
+    "@darraghor/eslint-plugin-nestjs-typed": "^3.17.1",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
